--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^13.15.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "eslint-plugin-unused-imports": "^4.1.4",
