--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "unused-imports"
   ],
   "rules": {
+    "no-useless-constructor": "off",
     "camelcase": "off",
     "@typescript-eslint/no-unused-vars": "warn",
     "no-unused-vars": "off",
